--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,7 @@
 	font-size: 12px;
 	scroll-behavior: smooth;
 	min-width: 400px;
+	max-width: 100vw;
 }
 
 * {
